--- a/Activity-07/css/styles.css
+++ b/Activity-07/css/styles.css
@@ -22,7 +22,7 @@
     padding: 5px;font-style: italic;}
 
 
-    /* Style for the navigation links */
+    /* navigation links */
     nav ul li a {text-decoration: none;
     color: #2091f9;
     background-color: #020612;
