--- a/Activity-08/css/styles.css
+++ b/Activity-08/css/styles.css
@@ -113,7 +113,7 @@ nav ul li a:hover {
 
 .resources {
   background-color: #8e4848;
-  padding: 10;
+  padding: 10px;
   border-radius: 6px;
   width: 60%;
   margin: 2rem auto;
