--- a/Activity-08/css/styles.css
+++ b/Activity-08/css/styles.css
@@ -27,7 +27,7 @@ h1 {
   background-size: cover;
   background-position: center;
   color: #7b2e2e;
-  padding: 1rem;
+  padding: 0;
   text-align: center;
 }
 
