--- a/Activity-10/Activity-10/css/style.css
+++ b/Activity-10/Activity-10/css/style.css
@@ -1,7 +1,7 @@
 body {
   background-color: forestgreen;
   margin: 0;
-  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif Sans;
+  font-family: 'Gill Sans', sans-serif;
 }
 
 /* Missing hyphen in background-color */
