--- a/Activity-13/css/styles.css
+++ b/Activity-13/css/styles.css
@@ -219,7 +219,18 @@
     margin: 0 auto;
   }
 
-  @media screen and (min-width: 660px) {
+  @media screen and (min-width: 768px) {
+    .chapters-summary {
+      flex-direction: row;
+      gap: 3rem;
+    }
+  
+    .nav-list {
+      display: flex;
+      justify-content: center;
+      gap: 1rem;
+    }
+
     body {
       font-size: 18px;
 
@@ -229,7 +240,7 @@
         width: 70%;
         
       }
-}
+    }
 
 @media screen and (min-width: 1024px) {
     body {
@@ -250,4 +261,4 @@
         width: 70%;
         
       }
-}
+    }
