--- a/Activity-14/css/styles.css
+++ b/Activity-14/css/styles.css
@@ -49,13 +49,19 @@
     letter-spacing: 0.05em;
   }
   
+
   .nav-list {
-    list-style: none;
-    gap: 1rem;
+    display: flex;
+    flex-direction: row;
     justify-content: center;
-    margin-top: 1rem;
+    gap: 1rem;
+    list-style: none;
+    padding: 0;
+    margin: 1rem 0;
+    flex-wrap: wrap;
   }
-  
+
+
   .nav-list > li {
     padding: 0.25rem 0.75rem;
     background-color: rgba(98, 81, 81, 0.2);
@@ -63,7 +69,9 @@
   }
   
   
-  nav ul {list-style: none;
+  nav ul {
+    display: flex;
+    list-style: none;
     justify-content: center;
     padding: 20px 0;
   
@@ -237,12 +245,18 @@
       flex-direction: row;
       gap: 3rem;
     }
-  
+
     .nav-list {
-      display: flex;
-      justify-content: center;
-      gap: 1rem;
-    }
+        flex-direction: column;
+        align-items: center;
+      }
+
+      .nav-list li {
+        width: 100%;
+        text-align: center;
+        margin-bottom: 0.5rem;
+      }
+  
 
     body {
       font-size: 18px;
