--- a/Activity-14/css/styles.css
+++ b/Activity-14/css/styles.css
@@ -50,16 +50,15 @@
   }
   
 
-.nav-list {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  gap: 1rem;
-  list-style: none;
-  padding: 0;
-  margin: 1rem 0;
-  flex-wrap: wrap;
-}
+  .nav-list {
+    display: flex;
+    flex-direction: row; /* horizontal */
+    justify-content: center;
+    gap: 1rem;
+    list-style: none;
+    padding: 0;
+    margin: 1rem 0;
+  }
 
 
   .nav-list > li {
@@ -246,7 +245,10 @@
       gap: 3rem;
     }
 
-
+    .nav-list {
+        flex-direction: column; /* switch to vertical */
+        align-items: center;
+      }
   
 
     body {
