--- a/Activity-14/css/styles.css
+++ b/Activity-14/css/styles.css
@@ -52,12 +52,12 @@
 
   .nav-list {
     display: flex;
-    flex-direction: row; /* horizontal */
+    flex-direction: row;
     justify-content: center;
-    gap: 1rem;
+    align-items: center;
     list-style: none;
-    padding: 0;
-    margin: 1rem 0;
+    gap: 1rem;
+    margin-top: 1rem;
   }
 
 
@@ -246,13 +246,10 @@
     }
 
     .nav-list {
-        flex-direction: column; /* switch to vertical */
+        flex-direction: column;
         align-items: center;
       }
 
-    .nav-list li {
-        margin-bottom: 1rem; /* spacing between buttons */
-      }
   
 
     body {
