--- a/Activity-14/css/styles.css
+++ b/Activity-14/css/styles.css
@@ -52,7 +52,7 @@
 
   .nav-list {
     display: flex;
-    flex-direction: row;
+    flex-direction: row; /* horizontal by default */
     justify-content: center;
     align-items: center;
     list-style: none;
@@ -247,7 +247,10 @@
 
     .nav-list {
         flex-direction: column;
-        align-items: center;
+      }
+    
+     .nav-list > li {
+        margin-bottom: 0.5rem;
       }
 
   
