--- a/Activity-14/css/styles.css
+++ b/Activity-14/css/styles.css
@@ -51,13 +51,10 @@
   
 
   .nav-list {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    list-style: none;
-    gap: 1rem;
-    margin-top: 1rem;
+    flex-direction: column;
+        align-items: center;
+        display: flex;
+
   }
 
 
@@ -246,12 +243,16 @@
     }
 
     .nav-list {
-        flex-direction: column !important;
-        align-items: center;
+        
+
+        display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    list-style: none;
+    gap: 1rem;
       }
-      .nav-list > li {
-        margin-bottom: 0.5rem;
-      }
+
 
   
 
