--- a/Project2/CSS/styles.css
+++ b/Project2/CSS/styles.css
@@ -18,6 +18,18 @@
     border-bottom: 3px solid #ccc;
     box-shadow: 0 3px 10px rgba(0,0,0,0.1);}
 
+  .section-bg {
+  background-color: #e78e6b;
+  border: white solid;
+  padding: 60px;
+  }
+
+  .sub-heading {
+    background-color: #e79d75;
+    height: 70px;
+    padding: 10px;
+  }
+
 
     .row {
         display: flex;
@@ -164,3 +176,8 @@
           justify-content: space-around;
         }
       }
+
+
+
+
+      
