--- a/Activity-16/css/style.css
+++ b/Activity-16/css/style.css
@@ -18,6 +18,9 @@ h1, h2 {
 }
 
 .display-area {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     width: 100%;
     height: 150px;
     margin: 20px 0;
@@ -35,4 +38,15 @@ h1, h2 {
     height: 30px;
     margin: 5px;
     border: 1px solid #ccc;
+}
+
+
+#colorValue {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+    font-size: 2em;
+    font-weight: bold;
+    color: #000;
 }
