--- a/Activity-14/css/styles.css
+++ b/Activity-14/css/styles.css
@@ -51,9 +51,12 @@
   
 
   .nav-list {
-    flex-direction: column;
-        align-items: center;
-        display: flex;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    list-style: none;
+    gap: 1rem;
 
   }
 
