--- a/Final/css/styles1.css
+++ b/Final/css/styles1.css
@@ -116,6 +116,7 @@
 
   .jc-list {
     display: flex;
+    list-style: none;
     flex-direction: column;
     align-items: center;    
     padding: 8px 12px;
