--- a/Final/css/stlyes.css
+++ b/Final/css/stlyes.css
@@ -174,7 +174,7 @@
   
   nav ul li a {text-decoration: none;
     color: #07111b;
-    background-color: #1ab7ec;
+    background-color: #e1b86c;
     padding: 8px 12px;
     border-radius: 8px;
     width: 150px;
